--- a/style.css
+++ b/style.css
@@ -12,7 +12,6 @@ body {
 input {
   display: block;
   margin-bottom: 15px;
-  background: transparent;
   border: 1px solid #2b2b2b;
   width: 200px;
   padding: 0.4rem;
@@ -29,7 +28,6 @@ input::placeholder {
   margin: 1rem auto 0;
   padding: 4rem 0rem;
   border-radius: 1rem;
-  border:double dotted;
 }
 
 #wrapper {
@@ -50,11 +48,9 @@ input::placeholder {
 }
 
 .wrapper-right {
-  max-width: 50%;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  padding-bottom: 0;
+  padding-bottom:0rem;
 }
 
 img {
@@ -99,7 +95,7 @@ button {
 
 .social {
   text-align: center;
-  align-self: flex-start;
+  align-self:flex-start;
   margin-top: 4rem;
   max-width: 14px;
 }
